// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assetHubKusama & karura > assetHubKusama transfer USDT to karura > balance on from chain 1`] = `
{
  "balance": 999000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`assetHubKusama & karura > assetHubKusama transfer USDT to karura > balance on to chain 1`] = `
{
  "free": "(rounded 999000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`assetHubKusama & karura > assetHubKusama transfer USDT to karura > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v4": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "interior": {
                    "x3": [
                      {
                        "parachain": 1000,
                      },
                      {
                        "palletInstance": 50,
                      },
                      {
                        "generalIndex": 1984,
                      },
                    ],
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "interior": {
                    "x3": [
                      {
                        "parachain": 1000,
                      },
                      {
                        "palletInstance": 50,
                      },
                      {
                        "generalIndex": 1984,
                      },
                    ],
                  },
                  "parents": 1,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`assetHubKusama & karura > assetHubKusama transfer USDT to karura > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`assetHubKusama & karura > assetHubKusama transfer USDT to karura > tx events 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6000)",
            "refTime": "(rounded 600000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "fees": [
        {
          "fun": {
            "Fungible": "(rounded 1000000000)",
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "paying": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Kusama",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "FeesPaid",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 2000,
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 1000000,
              },
              "id": {
                "interior": {
                  "X3": [
                    {
                      "Parachain": 1000,
                    },
                    {
                      "PalletInstance": 50,
                    },
                    {
                      "GeneralIndex": "(rounded 2000)",
                    },
                  ],
                },
                "parents": 1,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000,
              },
              "id": {
                "interior": {
                  "X3": [
                    {
                      "Parachain": 1000,
                    },
                    {
                      "PalletInstance": 50,
                    },
                    {
                      "GeneralIndex": "(rounded 2000)",
                    },
                  ],
                },
                "parents": 1,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": {
                "AllCounted": 1,
              },
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Kusama",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`assetHubKusama & karura > karura transfer USDT to assetHubKusama > balance on from chain 1`] = `
{
  "free": 9000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`assetHubKusama & karura > karura transfer USDT to assetHubKusama > balance on to chain 1`] = `
{
  "balance": "(rounded 1000000)",
  "extra": null,
  "reason": {
    "sufficient": null,
  },
  "status": "Liquid",
}
`;

exports[`assetHubKusama & karura > karura transfer USDT to assetHubKusama > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v4": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "interior": {
                    "x2": [
                      {
                        "palletInstance": 50,
                      },
                      {
                        "generalIndex": 1984,
                      },
                    ],
                  },
                  "parents": 0,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "interior": {
                    "x2": [
                      {
                        "palletInstance": 50,
                      },
                      {
                        "generalIndex": 1984,
                      },
                    ],
                  },
                  "parents": 0,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`assetHubKusama & karura > karura transfer USDT to assetHubKusama > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 10000)",
        "refTime": "(rounded 1000000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`assetHubKusama & karura > karura transfer USDT to assetHubKusama > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "interior": {
              "X3": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 50,
                },
                {
                  "GeneralIndex": "(rounded 2000)",
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "interior": {
            "X3": [
              {
                "Parachain": 1000,
              },
              {
                "PalletInstance": 50,
              },
              {
                "GeneralIndex": "(rounded 2000)",
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;
